qualified_do/tests/error_case01.stderr
error: expected at least one statement
 --> tests/error_case01.rs:4:23
  |
4 |     qdo! {hoge::fuga {}}
  |                       ^
